Corrected issue with daily digest meeting text not aligning properly.

--- a/src/scss/modules/_media-object.scss
+++ b/src/scss/modules/_media-object.scss
@@ -125,7 +125,7 @@
         }
         
         // add margin for media 
-        .-daily-digest.-collapsable & {
+        .-daily-digest.collapsable & {
             // text inside media__img inside daily-digest 
             // collapsble 'priority-box' 
             &.-meeting {
